--- a/_config.yml
+++ b/_config.yml
@@ -43,13 +43,13 @@ jekyll-archives:
 #######################################################
 
 # This is your site title
-title: Ascese. Elevando a Segurança Digital com Soluções de Penteste de Classe Mundial
+title: Elevando a Segurança Digital com Soluções de Penteste de Classe Mundial
 # Website language
 lang: pt-BR
 # Header Title
 header-title: Proteja-se do <strong>imprevisto.</strong>
 # Header Tagline
-headter-tagline: We Always
+headter-tagline: Soluções de Segurança e Penteste
 
 ####################################
 ######   CTA Header Buttons   ######
@@ -130,127 +130,127 @@ mailchimp:
 #############   About   #############
 #####################################
 about-title: Bem-vindo à Ascese
-about-description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean at tincidunt sem. Interdum et malesuada fames ac ante ipsum primis in faucibus. Morbi id ornare ante. Cras odio nibh, volutpat vitae volutpat sed, suscipit et nisi. Nulla a tellus at turpis gravida congue non sed nisl.
+about-description: Somos especialistas em segurança de dados e pentest, dedicados a proteger seu ambiente digital contra ameaças e vulnerabilidades. Nossa equipe altamente qualificada utiliza técnicas avançadas para identificar e mitigar riscos, garantindo que suas informações estejam sempre seguras. Confie na Ascese para elevar a segurança do seu negócio a um novo patamar..
 
 #####################################
 #############  Features  ############
 #####################################
-features-title: Features
-features-description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean at tincidunt sem. Interdum et malesuada fames ac ante ipsum primis in faucibus. Morbi id ornare ante.
+features-title: Serviços 
+features-description: Protegemos seus clientes contra as ameaças digitais e a garantir a integridade dos seus dados.
 
 #
 # Features
 #
 features:
   # Feature
-  - title: Clean & Unique Design
-    description: Maecenas sed laoreet urna. Praesent eget tristique tortor. Suspendisse consequat sed turpis in mattis.
+  - title: Avaliação de Vulnerabilidades e Pentest
+    description: Realizamos avaliações de vulnerabilidades e testes de penetração (pentest) detalhados para identificar e corrigir falhas de segurança em suas redes, aplicativos e sistemas. Nossos especialistas simulam ataques reais para garantir que suas defesas estejam sempre à frente das ameaças.
     icon: pe-7s-vector
 
   # Feature
-  - title: Professional Support
-    description: Maecenas sed laoreet urna. Praesent eget tristique tortor. Suspendisse consequat sed turpis in mattis.
+  - title: Monitoramento e Resposta a Incidentes 24/7
+    description: Oferecemos um serviço de monitoramento contínuo e resposta a incidentes, operando 24 horas por dia, 7 dias por semana. Nossa equipe de segurança está sempre alerta para detectar e responder rapidamente a qualquer atividade suspeita, minimizando o impacto de possíveis incidentes de segurança.
     icon: pe-7s-help2
 
   # Feature
-  - title: Pixel Perfect
-    description: Maecenas sed laoreet urna. Praesent eget tristique tortor. Suspendisse consequat sed turpis in mattis.
+  - title: Treinamento em Segurança Cibernética
+    description: Capacitamos sua equipe com treinamentos em segurança cibernética personalizados, abordando as melhores práticas e técnicas de defesa. Nossos cursos abrangem desde a conscientização sobre phishing até a implementação de políticas de segurança robustas, fortalecendo a postura de segurança da sua organização.
     icon: pe-7s-airplay
 
 #####################################
 ############  Portfolio  ############
 #####################################
-portfolio-title: Portfolio
-portfolio-description: Maecenas tempus nec mi et placerat. Duis at odio vitae ex gravida volutpat. Nulla finibus aliquet diam ut eleifend. Mauris consequat interdum quam. Mauris dui sapien, efficitur et cursus id, molestie fringilla turpis.
+#portfolio-title: Portfolio
+#portfolio-description: Maecenas tempus nec mi et placerat. Duis at odio vitae ex gravida volutpat. Nulla finibus aliquet diam ut eleifend. Mauris consequat interdum quam. Mauris dui sapien, efficitur et cursus id, molestie fringilla turpis.
 
 #
 # Portfolio Grid
 #
-portfolio-categories:
-  [Websites, Logo, Graphic Design, Development, Video, Photography]
-portfolio:
+#portfolio-categories:
+ # [Websites, Logo, Graphic Design, Development, Video, Photography]
+#portfolio:
   # Portfolio Item
-  - title: S<span class="thin">era</span> Style
-    categories: [Websites, Graphic Design]
-    image: img-01.jpg
-    url: "#"
+ # - title: S<span class="thin">era</span> Style
+ #   categories: [Websites, Graphic Design]
+ #   image: img-01.jpg
+  #  url: "#"
+#
+  # Portfolio Item
+ # - title: S<span class="thin">era</span> Style
+   # categories: [Graphic Design, Logo, Websites]
+  #  image: img-02.jpg
+   # url: "#"
 
   # Portfolio Item
-  - title: S<span class="thin">era</span> Style
-    categories: [Graphic Design, Logo, Websites]
-    image: img-02.jpg
-    url: "#"
+ # - title: S<span class="thin">era</span> Style
+ #   categories: [Graphic Design, Logo, Photography]
+  #  image: img-03.jpg
+  #  url: "#"
 
   # Portfolio Item
-  - title: S<span class="thin">era</span> Style
-    categories: [Graphic Design, Logo, Photography]
-    image: img-03.jpg
-    url: "#"
+ # - title: S<span class="thin">era</span> Style
+   # categories: [Websites, Video, Photography]
+   # image: img-04.jpg
+  #  url: "#"
 
   # Portfolio Item
-  - title: S<span class="thin">era</span> Style
-    categories: [Websites, Video, Photography]
-    image: img-04.jpg
-    url: "#"
+  #- title: S<span class="thin">era</span> Style
+    #categories: [Development, Logo]
+   # image: img-05.jpg
+   # url: "#"
 
   # Portfolio Item
-  - title: S<span class="thin">era</span> Style
-    categories: [Development, Logo]
-    image: img-05.jpg
-    url: "#"
+  #- title: S<span class="thin">era</span> Style
+    #categories: [Development, Video]
+    #image: img-06.jpg
+   # url: "#"
 
   # Portfolio Item
-  - title: S<span class="thin">era</span> Style
-    categories: [Development, Video]
-    image: img-06.jpg
-    url: "#"
+  #- title: S<span class="thin">era</span> Style
+    #categories: [Websites, Graphic Design]
+   # image: img-07.jpg
+   # url: "#"
 
   # Portfolio Item
-  - title: S<span class="thin">era</span> Style
-    categories: [Websites, Graphic Design]
-    image: img-07.jpg
-    url: "#"
+ # - title: S<span class="thin">era</span> Style
+   # categories: [Websites, Video]
+   # image: img-08.jpg
+   # url: "#"
 
   # Portfolio Item
-  - title: S<span class="thin">era</span> Style
-    categories: [Websites, Video]
-    image: img-08.jpg
-    url: "#"
-
-  # Portfolio Item
-  - title: S<span class="thin">era</span> Style
-    categories: [Photography, Logo]
-    image: img-09.jpg
-    url: "#"
+  #- title: S<span class="thin">era</span> Style
+    #categories: [Photography, Logo]
+   # image: img-09.jpg
+   # url: "#"
 
 #####################################
 ##########  Core Features  ##########
 #####################################
-core-title: Core Features
-core-description: Duis at odio vitae ex gravida volutpat. Nulla finibus aliquet diam ut eleifend. Mauris consequat interdum quam. Mauris dui sapien, efficitur et cursus id, molestie fringilla turpis aliquet diam ut eleifend.
+core-title: Serviços centrais 
+core-description: Nossa missão é elevar a segurança do seu ambiente digital, fornecendo soluções inovadoras e suporte contínuo para proteger o que é mais importante para você. Confie na Ascese para manter sua empresa segura e à frente das ameaças cibernéticas.
 
 #
 # Core Features Left
 #
 core-features-left:
   # Feature
-  - name: Creative
-    description: Lorem ipsum dolor sit amet, consectetuer adipiscing diam.
+  - name: Gestão de Ativos
+    description: CyberSecurity Attack Surface Management (CSAM)
     icon: pe-7s-light
 
   # Feature
-  - name: Minimalism
-    description: Lorem ipsum dolor sit amet, consectetuer adipiscing diam.
+  - name: Gerenciamento de Vulnerabilidades e Configuração
+    description: Gerenciamento, Detecção e Resposta a Vulnerabilidades
     icon: pe-7s-drop
 
   # Feature
-  - name: Clean Coding
-    description: Lorem ipsum dolor sit amet, consectetuer adipiscing diam.
+  - name: Remediação de Riscos
+    description: Avaliação e Remediação Personalizada
     icon: pe-7s-coffee
 
   # Feature
-  - name: Friendly
-    description: Lorem ipsum dolor sit amet, consectetuer adipiscing diam.
+  - name: Detecção e Resposta a Ameaças
+    description: Detecção e Resposta na Nuvem
     icon: pe-7s-smile
 
 #
@@ -258,23 +258,22 @@ core-features-left:
 #
 core-features-right:
   # Feature
-  - name: Branding
-    description: Lorem ipsum dolor sit amet, consectetuer adipiscing diam.
+  - name: Automatização de Tarefas de Segurança
+    description: Automatize tarefas de segurança
     icon: pe-7s-wine
 
   # Feature
-  - name: Web Design
-    description: Lorem ipsum dolor sit amet, consectetuer adipiscing diam.
+  - name: Identificação e Remediação de Vulnerabilidades
+    description: Identifique as vulnerabilidades que realmente importam
     icon: pe-7s-monitor
 
   # Feature
-  - name: Graphic Design
-    description: Lorem ipsum dolor sit amet, consectetuer adipiscing diam.
-    icon: pe-7s-crop
+  - name: Gestão Proativa de Cargas de Trabalho
+    description: Ajude as equipes de segurança e desenvolvimento 
 
   # Feature
-  - name: Photography
-    description: Lorem ipsum dolor sit amet, consectetuer adipiscing diam.
+  - name: Documentação e Redirecionamento de Informações
+    description: Toda atividade é documentada e relatada detalhadamente
     icon: pe-7s-camera
 
 #####################################
@@ -288,42 +287,42 @@ testimonials-description: Aenean at tincidunt sem. Interdum et malesuada fames a
 #
 testimonials:
   # Client
-  - name: Johnatan Doe
-    url: http://themeforest.net
-    url-text: ThemeForest.net
-    avatar: avatar-01.jpg
-    cite: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer varius adipiscing lectus, eu ornare lectus semper in. Aenean at tincidunt sem. Interdum et malesuada fames ac ante ipsum primis in faucibus. Morbi id ornare ante. Cras odio nibh, volutpat vitae volutpat sed.
+  - name: Super Bock Group
+    url: https://superbockgroup.com/
+    url-text: superbockgroup.com
+    avatar: logo1.svg
+    cite: Queremos expressar nossa profunda gratidão à Ascese pelo excepcional suporte em cibersegurança. Graças à sua dedicação e profissionalismo, conseguimos garantir a segurança dos nossos sistemas e a confiança dos nossos clientes. Continuaremos a contar com a Ascese para manter nossos padrões de excelência e segurança online
     logo-img: themeforest.png
 
   # Client
-  - name: Adam Smith
-    url: http://codecanyon.net
-    url-text: CodeCanyon.net
-    avatar: avatar-02.jpg
-    cite: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer varius adipiscing lectus, eu ornare lectus semper in. Aenean at tincidunt sem. Interdum et malesuada fames ac ante ipsum primis in faucibus. Morbi id ornare ante. Cras odio nibh, volutpat vitae volutpat sed.
+  - name: Petrotec Group
+    url: https://www.petrotec.eu/
+    url-text: petrotec.eu
+    avatar: logo2.jpg
+    cite: A Petrotec Group agradece imensamente à Ascese pelo comprometimento e eficiência na proteção de nossos dados e sistemas. A parceria com a Ascese tem sido crucial para assegurar a integridade das nossas operações tecnológicas, permitindo-nos focar em fornecer soluções inovadoras para nossos clientes
     logo-img: codecanyon.png
 
   # Client
-  - name: Irene Warner
-    url: http://videohive.net
-    url-text: VideoHive.net
+  - name: Science4you
+    url: https://www.science4you.pt/
+    url-text: science4you.pt
     avatar: avatar-03.jpg
-    cite: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer varius adipiscing lectus, eu ornare lectus semper in. Aenean at tincidunt sem. Interdum et malesuada fames ac ante ipsum primis in faucibus. Morbi id ornare ante. Cras odio nibh, volutpat vitae volutpat sed.
-    logo-img: videohive.png
+    cite: Gostaríamos de agradecer à Ascese pelo excelente serviço de cibersegurança que tem nos proporcionado. A tranquilidade de saber que nossos dados e operações estão seguros nos permite continuar a inovar e oferecer brinquedos educativos de qualidade para as crianças. Obrigado, Ascese, por ser um pilar de confiança para nossa empresa
+    logo-img: logo3.png
 
   # Client
-  - name: Richard Ryan
-    url: http://audiojungle.net
-    url-text: AudioJungle.net
+  - name: Sanitana
+    url: https://www.sanitana.pt/pt/
+    url-text: sanitana.pt
     avatar: avatar-04.jpg
-    cite: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer varius adipiscing lectus, eu ornare lectus semper in. Aenean at tincidunt sem. Interdum et malesuada fames ac ante ipsum primis in faucibus. Morbi id ornare ante. Cras odio nibh, volutpat vitae volutpat sed.
-    logo-img: audiojungle.png
+    cite: Nosso sincero agradecimento à Ascese pela parceria sólida e pela proteção contínua que oferece aos nossos sistemas. A segurança proporcionada pela Ascese é fundamental para que possamos focar no desenvolvimento e na oferta de produtos de alta qualidade para os nossos clientes. Estamos confiantes de que, com a Ascese ao nosso lado, continuaremos a crescer com segurança e eficiência
+    logo-img: logo4.png
 
 #####################################
 ############# Our Blog ##############
 #####################################
-blog-title: Our Blog
-blog-description: Interdum et malesuada fames ac ante ipsum primis in faucibus. Morbi id ornare ante. Cras odio nibh, volutpat vitae volutpat sed, suscipit et nisi. Nulla a tellus at turpis gravida congue non sed nisl. Pellentesque scelerisque eu neque et tincidunt.
+#blog-title: Our Blog
+#blog-description: Interdum et malesuada fames ac ante ipsum primis in faucibus. Morbi id ornare ante. Cras odio nibh, volutpat vitae volutpat sed, suscipit et nisi. Nulla a tellus at turpis gravida congue non sed nisl. Pellentesque scelerisque eu neque et tincidunt.
 
 #####################################
 ############### Team ################
@@ -336,9 +335,9 @@ team-description: Nulla a tellus at turpis gravida congue non interdum et malesu
 #
 team:
   # Team Member
-  - name: Jack Skilton
+  - name: João Silva
     tagline: Graphic Designer
-    avatar: avatar-01.jpg
+    avatar: func1.jpg
 
     # Social Links
     youtube: "#"
@@ -349,9 +348,9 @@ team:
     vimeo: "#"
 
   # Team Member
-  - name: James Young
+  - name: Pedro Sousa
     tagline: Developer
-    avatar: avatar-02.jpg
+    avatar: func2.jpg
 
     # Social Links
     youtube: "#"
@@ -362,9 +361,9 @@ team:
     vimeo: "#"
 
   # Team Member
-  - name: Johnatan Doe
+  - name: Tiago Ferreira
     tagline: Hacker
-    avatar: avatar-04.jpg
+    avatar: func3.jpg
 
     # Social Links
     youtube: "#"
@@ -375,9 +374,9 @@ team:
     vimeo: "#"
 
   # Team Member
-  - name: Ecaterina Doe
+  - name: Luís Young
     tagline: Support Expert
-    avatar: avatar-03.jpg
+    avatar: func4.jpg
 
     # Social Links
     youtube: "#"
