--- a/_config.yml
+++ b/_config.yml
@@ -337,7 +337,7 @@ team:
   # Team Member
   - name: João Silva
     tagline: Graphic Designer
-    avatar: func1.jpg
+    avatar: funci1.jpg
 
     # Social Links
     youtube: "#"
