--- a/_config.yml
+++ b/_config.yml
@@ -168,55 +168,55 @@ portfolio-description: Maecenas tempus nec mi et placerat. Duis at odio vitae ex
 portfolio-categories:
  [Websites, Logo, Graphic Design, Development, Video, Photography]
  portfolio:
- Portfolio Item
+# Portfolio Item
  - title: S<span class="thin">era</span> Style
    categories: [Websites, Graphic Design]
    image: img-01.jpg
   url: "#"
 
- Portfolio Item
+ #Portfolio Item
  - title: S<span class="thin">era</span> Style
  categories: [Graphic Design, Logo, Websites]
   image: img-02.jpg
  url: "#"
 
- Portfolio Item
+# Portfolio Item
  - title: S<span class="thin">era</span> Style
    categories: [Graphic Design, Logo, Photography]
   image: img-03.jpg
   url: "#"
 
- Portfolio Item
+ #Portfolio Item
  - title: S<span class="thin">era</span> Style
  categories: [Websites, Video, Photography]
  image: img-04.jpg
   url: "#"
 
- Portfolio Item
+ #Portfolio Item
 - title: S<span class="thin">era</span> Style
  categories: [Development, Logo]
  image: img-05.jpg
  url: "#"
 
- Portfolio Item
+ #Portfolio Item
 - title: S<span class="thin">era</span> Style
  categories: [Development, Video]
  image: img-06.jpg
  url: "#"
 
- Portfolio Item
+ #Portfolio Item
 - title: S<span class="thin">era</span> Style
  categories: [Websites, Graphic Design]
  image: img-07.jpg
  url: "#"
 
- Portfolio Item
+ #Portfolio Item
  - title: S<span class="thin">era</span> Style
  categories: [Websites, Video]
  image: img-08.jpg
  url: "#"
 
- Portfolio Item
+ #Portfolio Item
 - title: S<span class="thin">era</span> Style
  categories: [Photography, Logo]
  image: img-09.jpg
