--- a/_config.yml
+++ b/_config.yml
@@ -163,64 +163,65 @@ features:
 portfolio-title: Portfolio
 portfolio-description: Maecenas tempus nec mi et placerat. Duis at odio vitae ex gravida volutpat. Nulla finibus aliquet diam ut eleifend. Mauris consequat interdum quam. Mauris dui sapien, efficitur et cursus id, molestie fringilla turpis.
 
-#Portfolio Grid
-
+#
+# Portfolio Grid
+#
 portfolio-categories:
- [Websites, Logo, Graphic Design, Development, Video, Photography]
- portfolio:
-# Portfolio Item
- - title: S<span class="thin">era</span> Style
-   categories: [Websites, Graphic Design]
-   image: img-01.jpg
-  url: "#"
+  [Websites, Logo, Graphic Design, Development, Video, Photography]
+portfolio:
+  # Portfolio Item
+  - title: S<span class="thin">era</span> Style
+    categories: [Websites, Graphic Design]
+    image: img-01.jpg
+    url: "#"
 
- #Portfolio Item
- - title: S<span class="thin">era</span> Style
- categories: [Graphic Design, Logo, Websites]
-  image: img-02.jpg
- url: "#"
+  # Portfolio Item
+  - title: S<span class="thin">era</span> Style
+    categories: [Graphic Design, Logo, Websites]
+    image: img-02.jpg
+    url: "#"
 
-# Portfolio Item
- - title: S<span class="thin">era</span> Style
-   categories: [Graphic Design, Logo, Photography]
-  image: img-03.jpg
-  url: "#"
+  # Portfolio Item
+  - title: S<span class="thin">era</span> Style
+    categories: [Graphic Design, Logo, Photography]
+    image: img-03.jpg
+    url: "#"
 
- #Portfolio Item
- - title: S<span class="thin">era</span> Style
- categories: [Websites, Video, Photography]
- image: img-04.jpg
-  url: "#"
+  # Portfolio Item
+  - title: S<span class="thin">era</span> Style
+    categories: [Websites, Video, Photography]
+    image: img-04.jpg
+    url: "#"
 
- #Portfolio Item
-- title: S<span class="thin">era</span> Style
- categories: [Development, Logo]
- image: img-05.jpg
- url: "#"
+  # Portfolio Item
+  - title: S<span class="thin">era</span> Style
+    categories: [Development, Logo]
+    image: img-05.jpg
+    url: "#"
 
- #Portfolio Item
-- title: S<span class="thin">era</span> Style
- categories: [Development, Video]
- image: img-06.jpg
- url: "#"
+  # Portfolio Item
+  - title: S<span class="thin">era</span> Style
+    categories: [Development, Video]
+    image: img-06.jpg
+    url: "#"
 
- #Portfolio Item
-- title: S<span class="thin">era</span> Style
- categories: [Websites, Graphic Design]
- image: img-07.jpg
- url: "#"
+  # Portfolio Item
+  - title: S<span class="thin">era</span> Style
+    categories: [Websites, Graphic Design]
+    image: img-07.jpg
+    url: "#"
 
- #Portfolio Item
- - title: S<span class="thin">era</span> Style
- categories: [Websites, Video]
- image: img-08.jpg
- url: "#"
+  # Portfolio Item
+  - title: S<span class="thin">era</span> Style
+    categories: [Websites, Video]
+    image: img-08.jpg
+    url: "#"
 
- #Portfolio Item
-- title: S<span class="thin">era</span> Style
- categories: [Photography, Logo]
- image: img-09.jpg
- url: "#"
+  # Portfolio Item
+  - title: S<span class="thin">era</span> Style
+    categories: [Photography, Logo]
+    image: img-09.jpg
+    url: "#"
 
 #####################################
 ##########  Core Features  ##########
@@ -321,8 +322,8 @@ testimonials:
 #####################################
 ############# Our Blog ##############
 #####################################
-#blog-title: Our Blog
-#blog-description: Interdum et malesuada fames ac ante ipsum primis in faucibus. Morbi id ornare ante. Cras odio nibh, volutpat vitae volutpat sed, suscipit et nisi. Nulla a tellus at turpis gravida congue non sed nisl. Pellentesque scelerisque eu neque et tincidunt.
+blog-title: Our Blog
+blog-description: Interdum et malesuada fames ac ante ipsum primis in faucibus. Morbi id ornare ante. Cras odio nibh, volutpat vitae volutpat sed, suscipit et nisi. Nulla a tellus at turpis gravida congue non sed nisl. Pellentesque scelerisque eu neque et tincidunt.
 
 #####################################
 ############### Team ################
